--- a/.example.env
+++ b/.example.env
@@ -1,7 +1,10 @@
 # Example values for .env
 
 ## Express server
+# Express port
 PORT=8000
+# Express host
+HAPI_HOST=127.0.0.1
 
 
 ## PostgreSQL
@@ -14,4 +17,4 @@ POSTGRES_DB=volga_volga
 # Server port
 POSTGRES_PORT=5432
 # Server address
-POSTGRES_HOST=127.0.0.2
+POSTGRES_HOST=localhost
