fix: prod & dev env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     container_name: postgres
     image: postgres:10
     env_file:
-      - .env
+      - .development.env
     environment:
       PG_DATA: /var/lib/postgresql/data
     ports:
